rawOverLocalReference